# fluxor

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml
app/: .env.example  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
app/docs/: TECNICO.md  application-services-v1.md  arquitetura-home-widgets.md  modelo-conceitual-v1.md  remote-api-v1.md  sqlite-schema-v1.md  sync-v1.md  temas-v1.md
app/public/: manifest.webmanifest
app/scripts/: dev-env.mjs  generate-icon-catalog.mjs  tauri-cli.mjs
app/src/: main.tsx
app/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/permissions/: attachment-storage.toml
app/src-tauri/src/: attachment_storage.rs  lib.rs  main.rs
app/src/app/: App.tsx  AppBootstrap.tsx
app/src/components/: .gitkeep  ToastBanner.tsx
app/src/config/: app-meta.ts
app/src/features/: .gitkeep
app/src/layouts/: MainLayout.tsx
app/src/pages/: CategoriesPage.tsx  CreateFinancialRecordPage.tsx  FinancialRecordDetailsPage.tsx  HomePage.tsx  PayeesPage.tsx  SettingsPage.tsx  WalletsPage.tsx
app/src/routes/: index.tsx
app/src/styles/: globals.css  theme.css
app/src/types/: index.ts
app/src/utils/: platform.ts
server/: .env.example  Dockerfile  Makefile  README.md  package-lock.json  package.json  tsconfig.json
server/docs/: TECNICO.md
server/src/: app.ts  index.ts  server.ts
server/src/config/: env.ts
server/src/database/: index.ts  migrate.ts  (+1 more)
(+412 files in other folders)
